add filter code

--- a/diffPro/conf/diffPro.conf
+++ b/diffPro/conf/diffPro.conf
@@ -13,3 +13,4 @@ res_path : ./res/
 service : phpui
 pb_flag : rp_format=pb
 pb2json : php /home/users/panhongguang/work/diffPro/phpui/pb2json.php
+filter_conf_file : ./conf/phpui.conf
