fix jsondiff bug && filter fields. v0.2

--- a/diffPro/conf/phpui.conf
+++ b/diffPro/conf/phpui.conf
@@ -1,5 +1,7 @@
 #字段忽略表
-bus->contents->data->timestamp
-s->datas->qid
-bus->data->timestamp
-
+->poi_result->option->total
+->poi_result->option->qid
+->poi_result->contents->geo
+->bus->routes->legs
+->mrtl->content->route->duration
+->mrtl->content->traffic->length
